Transactions and rewards implemented

--- a/backend/package.json
+++ b/backend/package.json
@@ -20,10 +20,11 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@clerk/clerk-sdk-node": "^4.13.23",
+    "@clerk/backend": "^2.26.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "dotenv": "^17.2.3",
     "firebase-admin": "^13.6.0",
     "openai": "^6.10.0",
     "reflect-metadata": "^0.2.2",
